fix(planishare): change background

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,8 @@
 .loader {
     height: 100%;
-
+    
     display: grid;
     place-items: center;
+
+    // background-color: var(--purple-light);
 }
