--- a/src/assets/styles/design/_colors.scss
+++ b/src/assets/styles/design/_colors.scss
@@ -8,6 +8,9 @@
     --purple-color: #AF63FF;
     --purple-dark-color: #563F97;
     --green-dark-color: #235633;
+    --yellow-light: #faebd7;
+    --purple-light:   #F2EAFF;
+    --pink-light: #FCE5EB;
 
     // Buttons
     --button-light-text: #fff;
