--- a/src/assets/styles/design/_colors.scss
+++ b/src/assets/styles/design/_colors.scss
@@ -11,6 +11,7 @@
     --yellow-light: #faebd7;
     --purple-light:   #F2EAFF;
     --pink-light: #FCE5EB;
+    --blue-light: #E4EEFB;
 
     // Buttons
     --button-light-text: #fff;
