fix(assets): optimize imgs

--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -53,7 +53,7 @@
                         <span>o</span>
                         <button mat-stroked-button type="button" (click)="loginWithGoogle()">
                           <mat-icon>login</mat-icon>
-                          Continuar con google
+                          Continuar con Google
                         </button>
                     </div>
                   </form>
