--- a/src/assets/styles/design/_colors.scss
+++ b/src/assets/styles/design/_colors.scss
@@ -10,7 +10,7 @@
     --green-dark-color: #235633;
     --yellow-light: #faebd7;
     --purple-light:   #F2EAFF;
-    --pink-light: #FCE5EB;
+    --pink-light: #F5E2DB;
     --blue-light: #E4EEFB;
 
     // Buttons
