fix(planishare): visual details

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -40,7 +40,7 @@
                             Iniciar sesión
                         </button>
                         <app-square-loader *ngIf="isLoading"></app-square-loader>
-                        <span>- o -</span>
+                        <span>o</span>
                         <button mat-stroked-button type="button" (click)="loginWithGoogle()">
                             <mat-icon>login</mat-icon>
                             Continuar con google
