--- a/src/app/features/homepage/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage/homepage.component.html
@@ -2,7 +2,7 @@
   <div class="container1">
     <div class="logo">
       <button mat-raised-button (click)="makeSearch($event)" [ngClass]="showSearchButton ? 'search-button' : ''">
-        <ng-container *ngIf="!showSearchButton">Planishare</ng-container>
+        <ng-container *ngIf="!showSearchButton">Planishare 📖</ng-container>
         <ng-container *ngIf="showSearchButton">
           Buscar
         </ng-container>
