--- a/src/app/features/homepage/tops/tops.component.html
+++ b/src/app/features/homepage/tops/tops.component.html
@@ -20,7 +20,7 @@
 
     <!-- Posts -->
     <div class="posts" *ngIf="hasData && !isLoading">
-        <ng-container *ngFor="let post of posts">
+        <ng-container *ngFor="let post of mostPopular">
           <mat-card class="card">
             <div class="card-body">
               <!-- <img
