--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div [style.background-color]="(buttonConfig|async)?.backgroundColor">
     <nav class="navbar" *ngIf="!isMobile">
         <button mat-raised-button class="logo" [routerLink]="['/']">
-            <span class="logo-text">Planishare</span>
+            <span class="logo-text">Planishare 📖</span>
         </button>
         <ul>
             <li>
