--- a/src/assets/styles/design/_colors.scss
+++ b/src/assets/styles/design/_colors.scss
@@ -7,7 +7,7 @@
     
     --purple-color: #AF63FF;
     --purple-dark-color: #563F97;
-    --green-dark-color: #235633;
+    --green-dark-color: #1B5E20;
     --yellow-light: #faebd7;
     --purple-light:   #F2EAFF;
     --pink-light: #F5E2DB;
