feat(homepage-component): replace home component

--- a/src/app/features/homepage/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage/homepage.component.html
@@ -1,154 +1,7 @@
 <header class="header">
-  <div class="container1">
-    <div class="logo">
-      <button mat-raised-button (click)="makeSearch($event)" [ngClass]="showSearchButton ? 'search-button' : ''">
-        <ng-container *ngIf="!showSearchButton">Planishare 📖</ng-container>
-        <ng-container *ngIf="showSearchButton">
-          Buscar
-        </ng-container>
-      </button>
-    </div>
-    <div class="subtitle1" *ngIf="!isMobile">
-      <h2>
-        Busca y publica planificaciones de enseñanza básica.<br>
-        Puedes buscar usando los filtros que están abajo o usando la barra de búsqueda.
-      </h2>
-    </div>
-    <div class="filters">
-      <app-rounded-select-search
-        class="filter"
-        [list]="academicLevelsList"
-        [control]="academicLevelControl"
-        [loading]="isAcademicLevelsLoading"
-        [showSearch]="false"
-        buttonText="Nivel Académico"
-        bgColor="var(--primary-color)"
-        textColor="var(--light-text)"
-        placeholder="Buscar nivel académico">
-      </app-rounded-select-search>
-      <app-rounded-select-group-search
-        class="filter"
-        [list]="subjectWithAxis"
-        [control]="axisControl"
-        [loading]="isaxesLoading"
-        buttonText="Eje"
-        bgColor="var(--purple-color)"
-        textColor="var(--light-text)"
-        placeholder="Buscar eje">
-      </app-rounded-select-group-search>
-      <app-rounded-select-search
-        class="filter"
-        [list]="subjectList"
-        [control]="subjectControl"
-        [loading]="isSubjectsLoading"
-        buttonText="Asignatura"
-        bgColor="var(--warn-color)"
-        textColor="var(--light-text)"
-        placeholder="Buscar asignatura">
-      </app-rounded-select-search>
-    </div>  
+  <div class="flex_column" [ngClass]="isMobile ? 'flex_center' : ''">
+    <h1 class="title">Busca y comparte planificaciones de enseñanza básica</h1>
+    <button mat-raised-button class="results-button" [routerLink]="['/', 'results']">Ver planificaciones</button>
   </div>
-
-  <div class="container2">
-    <div class="subtitle2" *ngIf="isMobile">
-      <h2>
-        Busca y publica planificaciones de enseñanza básica.<br>
-        Puedes buscar usando los filtros que están arriba o usando la barra de búsqueda.
-      </h2>
-    </div>
-    <div class="scroll-text">
-      <p>Revisa las publicaciones populares y recientes</p>
-      <div>
-        <button mat-icon-button (click)="scroll(top_posts)" [disabled]="isTopLoading">
-          <mat-icon>expand_more</mat-icon>
-        </button>
-      </div>
-    </div>
-  </div>
+  <img class="teachers-img" src="../../../../assets/images/homepage-teachers.png" alt="Ilustraciones de profesores">
 </header>
-
-
-<!-- Top posts -->
-<div #top_posts></div>
-<main class="main" *ngIf="!isTopLoading">
-  <section class="top-section">
-    <div class="top-likes-header">
-      <mat-icon>favorite</mat-icon>
-      <h4>Las más populares</h4>
-    </div>
-    <div class="ranking">
-      <mat-card class="card" *ngFor="let item of popularPost">
-        <mat-card-subtitle class="card-subtitle">
-          <div>
-            <span> {{ item.user|getUsername }} - {{ item.created_at|timeAgo }}</span>
-          </div>
-          <div>
-            <mat-icon>description</mat-icon>
-            <span>{{ item.suporting_material?.length ?? 0 + 1 }}</span>
-          </div>
-        </mat-card-subtitle>
-        <mat-card-title>{{ item.title }}</mat-card-title>
-        <mat-card-content>
-          {{ item.description }}
-        </mat-card-content>
-        <div class="card-footer">
-          <mat-chip-list class="tags">
-            <mat-chip class="academic-level-tag">{{ item.academic_level.name }}</mat-chip>
-            <mat-chip class="subject-tag">{{ item.axis.subject.name }}</mat-chip>
-            <mat-chip class="axis-tag">{{ item.axis.name }}</mat-chip>
-          </mat-chip-list>
-          <div class="reactions">
-            <div>
-              <mat-icon>favorite</mat-icon>
-              <span>{{ item.likes }} Me gusta</span>
-            </div>
-            <div>
-              <mat-icon>visibility</mat-icon>
-              <span>{{ item.views }} Visitas</span>
-            </div>
-          </div>
-        </div>
-      </mat-card>
-    </div>
-  </section>
-  <section class="top-section">
-    <div class="top-recent-header">
-      <mat-icon>schedule</mat-icon>
-      <h4>Las más recientes</h4>
-    </div>
-    <div class="ranking">
-      <mat-card class="card" *ngFor="let item of latestPosts">
-        <mat-card-subtitle class="card-subtitle">
-          <div>
-            <span> {{ item.user|getUsername }} - {{ item.created_at|timeAgo }}</span>
-          </div>
-          <div>
-            <mat-icon>description</mat-icon>
-            <span>{{ item.suporting_material?.length ?? 0 + 1 }}</span>
-          </div>
-        </mat-card-subtitle>
-        <mat-card-title>{{ item.title }}</mat-card-title>
-        <mat-card-content>
-          {{ item.description }}
-        </mat-card-content>
-        <div class="card-footer">
-          <mat-chip-list class="tags">
-            <mat-chip class="academic-level-tag">{{ item.academic_level.name }}</mat-chip>
-            <mat-chip class="subject-tag">{{ item.axis.subject.name }}</mat-chip>
-            <mat-chip class="axis-tag">{{ item.axis.name }}</mat-chip>
-          </mat-chip-list>
-          <div class="reactions">
-            <div>
-              <mat-icon>favorite</mat-icon>
-              <span>{{ item.likes }} Me gusta</span>
-            </div>
-            <div>
-              <mat-icon>visibility</mat-icon>
-              <span>{{ item.views }} Visitas</span>
-            </div>
-          </div>
-        </div>
-      </mat-card>
-    </div>
-  </section>
-</main>
