--- a/src/app/features/posts/user-posts/user-posts.component.scss
+++ b/src/app/features/posts/user-posts/user-posts.component.scss
@@ -131,6 +131,10 @@
     font-weight: 600;
 }
 
+mat-card-title {
+    cursor: pointer;
+}
+
 .card-subtitle {
     display: flex;
     justify-content: space-between;
