--- a/src/app/features/homepage/tops/tops.component.scss
+++ b/src/app/features/homepage/tops/tops.component.scss
@@ -9,25 +9,24 @@
     min-height: calc(100% - 4rem - 1rem); // 4rem = navbar height
 }
 
-.top-likes-header {
+.top-header {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 0.7rem;
 
     text-align: center;
-    color: var(--light-text);
 
     border-radius: 5px;
-    box-shadow: 0px 1px 3px #303030;
+    border: 0.5px solid rgba($color: #000000, $alpha: 0.1);
 
-    padding: 1rem 0;
+    padding: 0.5rem 0;
     margin-bottom: 0.5rem;
 
     max-width: 64.5rem;
     width: 100%;
 
-    background-color: var(--warn-color);
+    background-color: var(--light-background);
 
     h4 {
         font-size: 1rem;
@@ -36,6 +35,11 @@
         padding: 0;
         margin: 0;
     }
+}
+
+.top-header-active {
+    color: var(--light-text);
+    background-color: var(--warn-color);
 }
 
 // No results
