fix(planishare): fix visual details

--- a/src/app/features/auth/login/login.component.scss
+++ b/src/app/features/auth/login/login.component.scss
@@ -28,7 +28,7 @@
     margin-bottom: 1rem;
     
     > button {
-        background-color: var(--primary-color);
+        background-color: var(--green-dark-color);
 
         font-size: clamp(2rem, 0.0000rem + 4.1667vw, 5rem);
         color: var(--light-text);
