--- a/src/app/features/homepage/tops/tops.component.html
+++ b/src/app/features/homepage/tops/tops.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div class="flex_justify_center gap-05">
+  <div class="flex_justify_center" [ngClass]="isMobile ? 'flex_wrap' : 'gap-05'">
     <div
       matRipple
       class="top-header"
