--- a/src/app/features/auth/register/register.component.scss
+++ b/src/app/features/auth/register/register.component.scss
@@ -26,7 +26,7 @@
     margin-bottom: 1rem;
     
     > button {
-        background-color: var(--purple-color);
+        background-color: var(--green-dark-color);
 
         font-size: clamp(2rem, 0.0000rem + 4.1667vw, 5rem);
         color: var(--light-text);
