--- a/src/app/features/homepage/tops/tops.component.scss
+++ b/src/app/features/homepage/tops/tops.component.scss
@@ -20,7 +20,7 @@
     border-radius: 5px;
     border: 0.5px solid rgba($color: #000000, $alpha: 0.1);
 
-    padding: 0.5rem 0;
+    padding: 0.5rem 1rem;
     margin-bottom: 0.5rem;
 
     max-width: 64.5rem;
