--- a/src/app/features/posts/components/post-detail-card-shimmer/post-detail-card-shimmer.component.html
+++ b/src/app/features/posts/components/post-detail-card-shimmer/post-detail-card-shimmer.component.html
@@ -10,7 +10,7 @@
                 <ngx-shimmer-loading width="15ch" height="12px"></ngx-shimmer-loading>
             </div>
         </div>
-        <mat-icon>favorite</mat-icon>
+        <mat-icon>more_vert</mat-icon>
     </div>
     
     <mat-card-title>
